# DP-PIR

./: .bazelignore  .bazelrc  .eslintignore  .gitignore  .gitmodules  BUILD.bazel  Dockerfile  README.md  WORKSPACE.bazel  client.js  example.sh  format.sh  gen_config.sh  index.html  package.json  server.js  test.js
.github/workflows/: ci-format.yml  ci-test.yml
DPPIR/: BUILD.bazel  main.cc
DPPIR/config/: BUILD.bazel  config.cc  config.h  config_test.cc  gen_config.cc
DPPIR/noise/: BUILD.bazel  noise.cc  noise.h  noise_test.cc
DPPIR/onion/: BUILD.bazel  onion.cc  onion.h  onion_test.cc
DPPIR/protocol/backend/: BUILD.bazel  backend.h  backend_handlers.cc  backend_initialization.cc  backend_offline.cc  backend_online.cc
DPPIR/protocol/client/: BUILD.bazel  client.h  client_handlers.cc  client_initialization.cc  client_offline.cc  client_online.cc
DPPIR/protocol/parallel_party/: BUILD.bazel  parallel_party.h  parallel_party_handlers.cc  parallel_party_initialization.cc  parallel_party_offline.cc  parallel_party_online.cc  parallel_party_shuffle.cc  parallel_party_util.inc
DPPIR/protocol/party/: BUILD.bazel  party.h  party_handlers.cc  party_initialization.cc  party_offline.cc  party_online.cc
DPPIR/sharing/: BUILD.bazel  additive.cc  additive.h  additive_test.cc  incremental.cc  incremental.h  incremental_test.cc
DPPIR/shuffle/: BUILD.bazel  local_shuffle.cc  local_shuffle.h  parallel_shuffle.cc  parallel_shuffle.h  shuffle_test.cc  util.cc  util.h
DPPIR/sockets/: BUILD.bazel  client_socket.cc  client_socket.h  common.cc  common.h  consts.h  parallel_socket.cc  parallel_socket.h  server_socket.cc  server_socket.h  socket_test.cc
DPPIR/types/: BUILD.bazel  containers.h  database.cc  database.h  state.cc  state.h  types.cc  types.h
client/: .eslintignore  .eslintrc.json  client.js  crypto.js  hash.js  index.html  protocol.js  protocols-local.js  protocols.js  sharing.js  ui.js
client/proto/: drivacy.js  index.js  package.json
config/: .gitignore  example.txt
drivacy/: BUILD.bazel  client.cc  client.h  client_offline.cc  client_online.cc  config.cc  main.cc  party.h  party.inc  party_offline.cc  party_online.cc  secret_sharing.cpp  test.bzl  valgrind.bzl
drivacy/io/: BUILD.bazel  abstract_socket.h  client_socket.cc  client_socket.h  file.cc  file.h  interparty_socket.cc  interparty_socket.h  intraparty_socket.cc  intraparty_socket.h  simulated_socket.cc  simulated_socket.h  socket.cc  socket.h  unified_listener.cc  unified_listener.h  websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
drivacy/parties/: BUILD.bazel  backend_party.cc  backend_party.h  client.cc  client.h  head_party.cc  head_party.h  party.cc  party.h
drivacy/parties/offline/: BUILD.bazel  backend_party.cc  backend_party.h  client.cc  client.h  head_party.cc  head_party.h  party.cc  party.h
drivacy/parties/online/: BUILD.bazel  backend_party.cc  backend_party.h  client.cc  client.h  head_party.cc  head_party.h  party.cc  party.h
drivacy/primitives/: BUILD.bazel  additive.cc  additive.h  additive_secret_sharing.cc  additive_secret_sharing.h  additive_secret_sharing_test.cc  additive_test.cc  crypto.cc  crypto.h  crypto_test.cc  incremental.cc  incremental.h  incremental_test.cc  noise.cc  noise.h  noise_test.cc  secret_sharing.cc  secret_sharing.h  secret_sharing_test.cc  util.h
drivacy/proto/: BUILD.bazel  config.proto  messages.proto  table.proto
drivacy/protocol/: BUILD.bazel  backend.cc  backend.h  client.cc  client.h  noise.cc  noise.h  query.cc  query.h  response.cc  response.h  shuffle.cc  shuffle.h
drivacy/protocol/offline/: BUILD.bazel  client.cc  client.h  noise.cc  noise.h  shuffle.cc  shuffle.h
drivacy/protocol/offline/test/: BUILD.bazel  shuffle.cc
drivacy/protocol/online/: BUILD.bazel  backend.cc  backend.h  client.cc  client.h  noise.cc  noise.h  query.cc  query.h  response.cc  response.h  shuffle.cc  shuffle.h
drivacy/protocol/online/test/: BUILD.bazel  shuffle.cc
drivacy/protocol/test/: BUILD.bazel  many_tests.bzl  noise.cc  shuffle.cc
drivacy/test/: BUILD.bazel  main.cc  test.bzl
drivacy/test/testdata/: config1.json  config2.json  config3.json  table1.json  table2.json  table3.json
drivacy/testdata/: table1.json  table2.json
drivacy/types/: BUILD.bazel  batch.h  config.proto  messages.proto  types.cc  types.h
drivacy/util/: BUILD.bazel  fake.cc  fake.h  file.cc  file.h  socket_iterator.h  status.h
experiments/: aws.sh  aws_orchestrator.sh  aws_party.sh  daemon_client.sh  daemon_party.sh  daemon_server.sh  local.sh
experiments/checklist/: BUILD.bazel  WORKSPACE.bazel  main.go  run_client.sh  run_server.sh  stop.sh  stop_servers.sh
experiments/dppir/: .gitignore  client.sh  config.json  experiment.sh  server.sh  table.json
experiments/orchestrator/: .gitignore  cmd.js  constants.js  experiment.js  main.js  orchestrator.js  package-lock.json  package.json  read.sh  worker.js
experiments/orchestrator/stored/: figure1.json  figure2.json  figure3.json  figure4.json  figure5.json  figure6.json  figure7.json  (+3 more)
experiments/plots/: plot.py  requirements.txt
experiments/sealpir/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  main.cc  run.sh  server.cc  stop.sh
lib/libsodium-port/: wrapper.js
parties/: backend.js  config.js  config.json  frontend.js  party.js
parties/config/: config.js  config.json
parties/helpers/: ECMPC.js  garble.js  keys.js  table.js
parties/protocols/: broadcast.js  chunk.js  forward.js  preprocessing.js  query-honest.js  query-malicious.js  shuffle.js
scrape/: .gitignore  dependencies.sh  get_data.py  hash.js  requirements.txt  run.sh
scripts/: aws_client.sh  aws_orchestrator.sh  aws_party.sh  daemon_client.sh  daemon_party.sh  gen_config.sh  gen_dp_config.py  gen_table.py  install_aws.sh  kill.sh  pricing.py  recompute.sh  run.sh  run_client.sh  run_client_offline.sh  run_client_online.sh  run_parties.sh  run_parties_offline.sh  run_parties_online.sh  scrape.sh  stop_parties.sh
scripts/orchastrator/: orchastrator.js  package.json
static/: client.js  index.html  protocols.js
(+22 files in other folders)
