load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        "//DPPIR/config:config",
        "//DPPIR/protocol/backend",
        "//DPPIR/protocol/client",
        "//DPPIR/protocol/party",
        "//DPPIR/protocol/parallel_party",
        "//DPPIR/types:database",
        "//DPPIR/types:types",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@libsodium//:libsodium",
    ],
    data = [
        "//:configurations",
    ],
)
