# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("test.bzl", "end_to_end_test")

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "//drivacy/parties:party",
        "//drivacy/io:socket",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/util:file",
        "//drivacy/util:status",
    ],
)

cc_binary(
    name = "client",
    srcs = [
        "client.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "//drivacy/parties:client",
        "//drivacy/io:socket",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/util:file",
        "//drivacy/util:status",
    ],
)

cc_binary(
    name = "config",
    srcs = [
        "config.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf_headers",
        "//drivacy/primitives:crypto",
        "//drivacy/types:config_cc_proto",
    ],
)

# end to end tests
end_to_end_test(
    name = "end-to-end-1",
    table = "//drivacy/test:testdata/table2.json",
    config = "//drivacy/test:testdata/config1.json",
    parties = 2,
    parallelism = 1,
    batch = 100,
    queries = 200,
    tags = ["exclusive"],
)

end_to_end_test(
    name = "end-to-end-2",
    table = "//drivacy/test:testdata/table2.json",
    config = "//drivacy/test:testdata/config2.json",
    parties = 5,
    parallelism = 1,
    batch = 20,
    queries = 40,
    tags = ["exclusive"],
)

end_to_end_test(
    name = "end-to-end-3",
    table = "//drivacy/test:testdata/table3.json",
    config = "//drivacy/test:testdata/config3.json",
    parties = 3,
    parallelism = 3,
    batch = 10,
    queries = 30,
    tags = ["exclusive"],
)
