# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("test.bzl", "end_to_end_test")

exports_files(glob(["testdata/*.json"]), ["//visibility:public"])

cc_binary(
    name = "party_offline",
    srcs = [
        "party_offline.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "//drivacy/parties/offline:party",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/util:file",
        "//drivacy/util:status",
    ],
)

cc_binary(
    name = "client_offline",
    srcs = [
        "client_offline.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "//drivacy/parties/offline:client",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/util:file",
        "//drivacy/util:status",
    ],
)

cc_binary(
    name = "config",
    srcs = [
        "config.cc",
    ],
    deps = [
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf_headers",
        "//drivacy/primitives:crypto",
        "//drivacy/types:config_cc_proto",
    ],
)

# end to end tests
end_to_end_test(
    name = "end-to-end-1",
    table = "//drivacy:testdata/table1.json",
    config = "//drivacy:testdata/config1.json",
    parties = 2,
    parallelism = 1,
    batch = 100,
    queries = 100,
    span = "0.0",
    cutoff = "1.0",
    tags = ["exclusive"],
    max_time = 5,
)

end_to_end_test(
    name = "end-to-end-2",
    table = "//drivacy:testdata/table2.json",
    config = "//drivacy:testdata/config2.json",
    parties = 5,
    parallelism = 1,
    batch = 20,
    queries = 20,
    span = "3.333",
    cutoff = "7.675",
    tags = ["exclusive"],
    max_time = 80,
)

end_to_end_test(
    name = "end-to-end-3",
    table = "//drivacy:testdata/table2.json",
    config = "//drivacy:testdata/config2.json",
    parties = 5,
    parallelism = 1,
    batch = 20,
    queries = 20,
    span = "10",
    cutoff = "29.957",
    tags = ["exclusive"],
    max_time = 80,
)

end_to_end_test(
    name = "end-to-end-4",
    table = "//drivacy:testdata/table3.json",
    config = "//drivacy:testdata/config3.json",
    parties = 3,
    parallelism = 3,
    batch = 10,
    queries = 10,
    span = "10.0",
    cutoff = "29.957",
    tags = ["exclusive"],
    max_time = 80,
)
