# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "abstract_socket",
    hdrs = [
        "abstract_socket.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
    ],
)

cc_library(
    name = "socket",
    srcs = [
        "socket.cc",
        "websocket_server.cc",
        "simulated_socket.cc",
    ],
    hdrs = [
        "socket.h",
        "websocket_server.h",
        "simulated_socket.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "@com_google_absl//absl/functional:bind_front",
        "//:uWebSockets",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/io:abstract_socket",
    ],
)
