# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "abstract_socket",
    hdrs = [
        "abstract_socket.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
    ],
)

cc_library(
    name = "socket",
    srcs = [
        "intraparty_socket.cc",
        "simulated_socket.cc",
        "socket.cc",
        "websocket_client.cc",
        "websocket_server.cc",
    ],
    hdrs = [
        "intraparty_socket.h",
        "simulated_socket.h",
        "socket.h",
        "websocket_client.h",
        "websocket_server.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/strings:str_format",
        "//:uWebSockets",
        "//drivacy/types:config_cc_proto",
        "//drivacy/types:types",
        "//drivacy/io:abstract_socket",
        "//third_party:easywsclient",
    ],
)
