# Copyright 2020 multiparty.org

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Secret Sharing Schemes we use in the protocol.
cc_library(
    name = "sharing",
    srcs = [
        "incremental.cc",
        "additive.cc",
    ],
    hdrs = [
        "incremental.h",
        "additive.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":util"
    ],
)

# Private utility library.
cc_library(
    name = "util",
    srcs = [],
    hdrs = [
        "util.h",
    ],
)

# Tests
cc_test(
    name = "incremental_test",
    srcs = [
        "incremental_test.cc",
    ],
    deps = [
        ":sharing",
    ],
)
cc_test(
    name = "additive_test",
    srcs = [
        "additive_test.cc",
    ],
    deps = [
        ":sharing",
    ],
)
