load("@rules_cc//cc:defs.bzl", "cc_library")

# Parties/Server side protocol.
cc_library(
    name = "protocol",
    srcs = [
        "backend.cc",
        "query.cc",
        "response.cc",
    ],
    hdrs = [
        "backend.h",
        "query.h",
        "response.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/primitives:crypto",
        "//drivacy/primitives:sharing",
        "//drivacy/types:types",
    ],
)

# Client side protocol.
cc_library(
    name = "client",
    srcs = [
        "client.cc",
    ],
    hdrs = [
        "client.h",
    ],
    visibility = ["//drivacy:__subpackages__"],
    deps = [
        "//drivacy/primitives:crypto",
        "//drivacy/primitives:sharing",
        "//drivacy/types:types",
    ],
)
